methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:36: error: expected start of definition
override def run() {
         ^MethodsPicture:52: error: Unmatched closing brace '}' ignored here
}
^